[package]
name = "i2c-slave-gpio"
version = "0.1.0"
edition = "2021"
description = "gpio based i2c slave"
homepage = "https://github.com/Fymyte/i2c-slave-gpio"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
gpio-cdev = "0.5.1"
quicli = "0.4.0"
structopt = "0.3.26"
