[package]
name = "i2c-slave-gpio"
version = "0.1.0"
edition = "2021"
description = "gpio based i2c slave"
homepage = "https://github.com/Fymyte/i2c-slave-gpio-rs"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
gpio-cdev = "0.5.1"
log = "0.4.17"
quicli = "0.4.0"
structopt = "0.3.26"
thiserror = "1.0.38"
